--- a/app/package.json
+++ b/app/package.json
@@ -81,7 +81,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www.js"
+    "start": "nodemon ./bin/www.js"
   },
   "keywords": [],
   "author": "",
